# C14-engenharia-de-software

./: README.md  build.bat  pyproject.toml
piadas_chuck/: main.py
piadas_chuck_project/: piadas_chuck.spec
piadas_chuck_project/piadas_chuck/: main.py
