[project]
name = "piadas-chuck"
version = "0.1.0"
description = "App simples que consome API de piadas"
authors = [
    {name = "Lavinia Amaral"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pyinstaller = { version = "^6.15.0", python = ">=3.10,<3.15" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
